err/seismograph.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/SQLAlchemy-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/furl'...
Listing './lib/python3.5/site-packages/furl-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/jsonschema'...
Listing './lib/python3.5/site-packages/jsonschema/schemas'...
Listing './lib/python3.5/site-packages/jsonschema/tests'...
Listing './lib/python3.5/site-packages/jsonschema-2.6.0.dist-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/orderedmultidict'...
Listing './lib/python3.5/site-packages/orderedmultidict-0.7.11.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/seisma'...
Listing './lib/python3.5/site-packages/seisma-0.0.2.egg-info'...
Listing './lib/python3.5/site-packages/seismograph'...
Listing './lib/python3.5/site-packages/seismograph/ext'...
Listing './lib/python3.5/site-packages/seismograph/ext/alchemy'...
Listing './lib/python3.5/site-packages/seismograph/ext/builder'...
Listing './lib/python3.5/site-packages/seismograph/ext/mocker'...
Listing './lib/python3.5/site-packages/seismograph/ext/mocker/runners'...
Listing './lib/python3.5/site-packages/seismograph/ext/seisma'...
Listing './lib/python3.5/site-packages/seismograph/ext/selenium'...
Listing './lib/python3.5/site-packages/seismograph/ext/selenium/forms'...
Listing './lib/python3.5/site-packages/seismograph/ext/selenium/proxy'...
Listing './lib/python3.5/site-packages/seismograph/ext/selenium/proxy/interfaces'...
Listing './lib/python3.5/site-packages/seismograph/groups'...
Listing './lib/python3.5/site-packages/seismograph/utils'...
Listing './lib/python3.5/site-packages/seismograph-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/selenium'...
Listing './lib/python3.5/site-packages/selenium/common'...
Listing './lib/python3.5/site-packages/selenium/webdriver'...
Listing './lib/python3.5/site-packages/selenium/webdriver/android'...
Listing './lib/python3.5/site-packages/selenium/webdriver/blackberry'...
Listing './lib/python3.5/site-packages/selenium/webdriver/chrome'...
Listing './lib/python3.5/site-packages/selenium/webdriver/common'...
Listing './lib/python3.5/site-packages/selenium/webdriver/common/actions'...
Listing './lib/python3.5/site-packages/selenium/webdriver/common/html5'...
Listing './lib/python3.5/site-packages/selenium/webdriver/edge'...
Listing './lib/python3.5/site-packages/selenium/webdriver/firefox'...
Listing './lib/python3.5/site-packages/selenium/webdriver/firefox/amd64'...
Listing './lib/python3.5/site-packages/selenium/webdriver/firefox/x86'...
Listing './lib/python3.5/site-packages/selenium/webdriver/ie'...
Listing './lib/python3.5/site-packages/selenium/webdriver/opera'...
Listing './lib/python3.5/site-packages/selenium/webdriver/phantomjs'...
Listing './lib/python3.5/site-packages/selenium/webdriver/remote'...
Listing './lib/python3.5/site-packages/selenium/webdriver/safari'...
Listing './lib/python3.5/site-packages/selenium/webdriver/support'...
Listing './lib/python3.5/site-packages/selenium/webdriver/webkitgtk'...
Listing './lib/python3.5/site-packages/selenium-3.8.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/sqlalchemy'...
Listing './lib/python3.5/site-packages/sqlalchemy/connectors'...
Listing './lib/python3.5/site-packages/sqlalchemy/databases'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/firebird'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mssql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mysql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/oracle'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/postgresql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sqlite'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sybase'...
Listing './lib/python3.5/site-packages/sqlalchemy/engine'...
Listing './lib/python3.5/site-packages/sqlalchemy/event'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext/declarative'...
Listing './lib/python3.5/site-packages/sqlalchemy/orm'...
Listing './lib/python3.5/site-packages/sqlalchemy/sql'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/plugin'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/suite'...
Listing './lib/python3.5/site-packages/sqlalchemy/util'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './selenium'...
Listing './selenium/webdriver'...
Listing './selenium/webdriver/firefox'...
Listing './selenium/webdriver/firefox/amd64'...
Listing './selenium/webdriver/firefox/x86'...
Listing './selenium/webdriver/remote'...
Listing './share'...
Listing './share/python-wheels'...
